partman-palo (1) UNRELEASED; urgency=low

  * First version.

 -- Anton Zinoviev <zinoviev@debian.org>  Thu, 29 Jan 2004 23:49:32 +0200

Local Variables:
coding: utf-8
End: