@@ -24,31 +24,38 @@ if [ -f $id/method ]; then
     method=$(cat $id/method)
 fi
 
-new_flags=''
+has_palo=no
+flags=''
 open_dialog GET_FLAGS $id
 while { read_line flag; [ "$flag" ]; }; do
     if [ "$flag" != palo ]; then
-	if [ "$new_flags" ]; then
-	    new_flags="$new_flags
+	if [ "$flags" ]; then
+	    flags="$flags
 $flag"
 	else
-	    new_flags="$flag"
+	    flags="$flag"
 	fi
+    else
+	has_palo=yes
     fi
 done
 close_dialog
 
-if [ "$method" = palo ]; then
-    new_flags="$new_flags
-palo"
+if [ "$method" = palo -a "$has_palo" = no ]; then
+    open_dialog SET_FLAGS $id
+    write_line "$flags"
+    write_line palo
+    write_line NO_MORE
+    close_dialog
+elif [ "$method" != palo -a "$has_palo" = yes ]; then
+    open_dialog SET_FLAGS $id
+    write_line "$flags"
+    write_line NO_MORE
+    close_dialog
 fi
 
-open_dialog SET_FLAGS $id
-write_line "$new_flags"
-write_line NO_MORE
-close_dialog
 
-# The following is a hack and should be removed in future versions of
+# The following is a hack and will be removed in future versions of
 # partman.  It ensures that the palo partition can not be used for
 # some regular file system.
 if [ "$method" = palo ]; then
