@@ -1,8 +1,18 @@
 partman-palo (1) UNRELEASED; urgency=low
 
-  * First version.
+  * Translations:
+      - DO NOT update changelog anymore for translations. This will be done
+        by using scripts/l10n-changes script
+      - When releasing the package, don't forget to run
+        script/l10n-changes/output-l10n-changes and put its
+        output here. Then put this note in the new UNRELEASED entry.
+        
+  * Included in the CVS repository.
+  * init.d/palo: read the flags only of partitions, omit free spaces.
+  * rules: swap binary-arch and binary-indep
+  * update.d/palo: use SET_FLAGS only if the flags change.
 
- -- Anton Zinoviev <zinoviev@debian.org>  Thu, 29 Jan 2004 23:49:32 +0200
+ -- Anton Zinoviev <zinoviev@debian.org>  Sat,  6 Mar 2004 12:41:11 +0200
 
 Local Variables:
 coding: utf-8
